manifests/edc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edc-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: "edc-ingress"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0834734e2c238c2d1, subnet-0a501bdb515029df9, subnet-061ce14d8a9e3c4b8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:381491900147:certificate/66e12692-d119-4d5e-b0fe-3bc0c71505ce
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: edc.edcaas.io
    http:
      paths:
      # edc-service routes
      - path: /port-11001
        pathType: Prefix
        backend:
          service:
            name: edc-service
            port:
              number: 11001
      - path: /api/management
        pathType: Prefix
        backend:
          service:
            name: edc-service
            port:
              number: 11002
      - path: /api/dsp
        pathType: Prefix
        backend:
          service:
            name: edc-service
            port:
              number: 11003
      # edc-ui-service routes
      # - path: /ui
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: edc-ui-service
      #       port:
      #         number: 8080
